2008-11-02  Sam Steingold  <sds@gnu.org>

	* makemake.in (LPARTS): add timezone only when needed (not unix &
	not win32), i.e., never; add deflanguage files only when building
	with_unicode & with_gettext

2008-11-02  Sam Steingold  <sds@gnu.org>

	implement the ANSI (IGNORE #'FUNCTION) declaration.
	* compiler.lisp (*fnode-list*): new dynamic variable
	(symbol-or-function-p): extracted from ...
	(process-declarations): use it for IGNORE & IGNORABLE too
	(fnode): add slots: IGNORE, IGNORABLE, USED
	(fname-ignored-p): add
	(c-LAMBDABODY): push *FUNC* onto *FNODE-LIST*
	(c-declarations): acept NAMELIST & FNODELIST to set IGNORE & IGNORABLE
	(c-FLET, c-LABELS): pass NAMELIST & FNODELIST to c-declarations
	(c-FUNCTION-MACRO-LET): make fnode IGNORABLE
	(value-form-index): make fnode USED and check if it was declared IGNORE
	(compile-lambdabody): bind *FNODE-LIST* and check for unused fnodes
	* timezone.lisp: declare all locals IGNORABLE

2008-11-02  Sam Steingold  <sds@gnu.org>

	* encoding.d, errwin32.d, spvw.d, spvw_alloca.d, spvw_allocate.d,
	* spvw_memfile.d, spvw_mmap.d, spvw_sigsegv.d, win32aux.d: avoid
	"warning: format not a string literal and no format arguments"
	by using puts instead of printf when possible;
	also use fputc instead of fputs for newline

2008-11-02  Sam Steingold  <sds@gnu.org>

	* makemake.in (XCFLAGS): add -Wno-format-nonliteral for gcc
	because -Wformat=2 is the default on ubuntu 8.10

2008-11-02  Sam Steingold  <sds@gnu.org>

	* spvw_sigsegv.d (print_mem_stats): add casts in
	PRINT_INTERNAL_TIME to avoid compilation warnings on x86_64

2008-11-02  Sam Steingold  <sds@gnu.org>

	* modules/berkeley-db/bdb.c: fix 4.7 support

2008-10-29  Sam Steingold  <sds@gnu.org>

	* configure: replace "grep -e" with "grep" because Solaris 10
	/usr/bin/grep does not support this option even though it is
	standardized by http://www.opengroup.org/susv3/utilities/grep.html
	Reported by Raymond Toy <raymond.toy@ericsson.com>
